(fix): phone input should properly resize on firefox

--- a/src/app/modules/onboarding-v2/page/onboarding.component.scss
+++ b/src/app/modules/onboarding-v2/page/onboarding.component.scss
@@ -415,6 +415,8 @@ m-onboarding {
 
                 input {
                   width: 100%;
+                  min-width: 10px;
+                  flex-shrink: 1;
                   padding-left: 8px;
 
                   font-size: 16px;
